[FIX] Add unsaved things in the last commit of notebook

--- a/tsp.ipynb
+++ b/tsp.ipynb
@@ -375,7 +375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is almost two times worse than the greedy one, but it is still a great starting point for our hill climbing algorithm, let's try to improve it."
+    "This is more than two times worse than the greedy one, but it is still a great starting point for our hill climbing algorithm, let's try to improve it."
    ]
   },
   {
